<resources>
    <string name="app_name">Mind</string>

    <string name="username">Username</string>

    <string name="link">
        New Here? <a> Create Account </a>
    </string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="here">Login Here</string>
    <string name="password">Password</string>
    <string name="new_register">Create Account</string>
    <string name="loginhere">Log in Here</string>

    <string name="user_name">User Name</string>

    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="create">Create New Quiz</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="library">Library</string>
    <string name="ict">ICT</string>
    <string name="advance_cia">Advance CIA</string>
    <string name="bpo">BPO</string>

    <string name="userEmail">email@gmail.com</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="credits">Credits</string>
    <string name="support">Support</string>
    <string name="gmail">Connect to Gmail</string>
    <string name="facebook">Connect to Facebook</string>
    <string name="change_pass">Change Password</string>
    <string name="signout">Sign Out</string>

    <string name="fullname">Full Name</string>
    <string name="birthdate">Date of Birth</string>
    <string name="email">Email</string>
    <string name="topic">Topic Name</string>

    <string name="menu">Main Menu</string>
    <string name="again">Quiz Again</string>

    <string name="total_correct_answers">Total of Correct Answers:</string>
    <string name="total_wrong_answers">Total of Wrong Answers:</string>

    <string name="number">#</string>
    <string name="question">QUESTION</string>
    <string name="choice">Choice</string>

    <string name="content">Quiz Content</string>
    <string name="generate">Generate Quiz</string>

    <string name="sample_quiz_content">
    <![CDATA[
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    Welcome to the Sample Quiz!

    Question 1:
    What is the capital of France?
    A) London
    B) Berlin
    C) Madrid
    D) Paris

    Question 2:
    Who wrote the play "Romeo and Juliet"?
    A) Charles Dickens
    B) William Shakespeare
    C) Jane Austen
    D) F. Scott Fitzgerald

    Question 3:
    What is the chemical symbol for water?
    A) H2O
    B) CO2
    C) NaCl
    D) O2

    Question 4:
    In which year did Christopher Columbus reach the Americas?
    A) 1492
    B) 1776
    C) 1812
    D) 1865

    Question 5:
    What is the largest planet in our solar system?
    A) Earth
    B) Mars
    C) Venus
    D) Jupiter

    Good luck with your quiz!
    ]]>
</string>

</resources>