<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfilePage"
    android:background="@color/black">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/profileLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/profile_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/display_userprofile"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/avatar"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/display_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/work_sans_medium"
                    android:textColor="@color/white"
                    android:textSize="26sp"/>

                <TextView
                    android:id="@+id/display_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/work_sans_medium"/>

            </LinearLayout>

            <Button
                android:id="@+id/go_back_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="19dp"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.141"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/go_back" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/additionalBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileLayout"
                app:layout_constraintVertical_bias="0.231">

                <Button
                    android:id="@+id/changepass_btn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/nofill_button"
                    android:drawableStart="@drawable/changepass_logo"
                    android:fontFamily="@font/work_sans_bold"
                    android:paddingLeft="15dp"
                    android:paddingRight="30dp"
                    android:text="@string/change_pass"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/signout_btn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/nofill_button"
                    android:fontFamily="@font/work_sans_bold"
                    android:paddingLeft="15dp"
                    android:paddingRight="30dp"
                    android:text="@string/signout"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>