<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".home_screen">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/mind_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userprofile_btn"
                app:srcCompat="@drawable/mind_logo_home" />

            <Button
                android:id="@+id/userprofile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:background="@drawable/white_button_round"
                android:drawableStart="@drawable/profile_user_logo"
                android:drawablePadding="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/work_sans_medium"
                android:paddingRight="20dp"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mind_logo">

                <Button
                    android:id="@+id/analytics_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/gray_round_button"
                    android:fontFamily="@font/work_sans_medium"
                    android:padding="15dp"
                    android:text="@string/analytics"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.793"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mind_logo" />

                <Button
                    android:id="@+id/settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/gray_round_button"
                    android:fontFamily="@font/work_sans_medium"
                    android:padding="15dp"
                    android:text="@string/settings"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.197"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mind_logo" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_section"
                android:layout_width="276dp"
                android:layout_height="227dp"
                android:background="@drawable/round_create_bg"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/capture_button"
                    android:layout_width="100dp"
                    android:layout_height="135dp"
                    android:layout_margin="30dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/round_button_blue"
                    android:drawableTop="@drawable/capture_logo"
                    android:drawablePadding="-20dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:paddingTop="20dp"
                    android:text="@string/capture"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="100dp"
                    android:layout_height="135dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/round_button_blue"
                    android:drawableTop="@drawable/upload_logo"
                    android:drawablePadding="-20dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:onClick="buttonOpenFile"
                    android:paddingTop="20dp"
                    android:text="@string/upload"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/capture_button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/create"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/library_btn"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/library_gradient_bg"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/library"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="46sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

<!--            <include layout="@layout/activity_library_sheet"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>