<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BooleanQuizPage"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_num"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/roboto_slab"
            android:paddingTop="15dp"
            android:text="@string/number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="True or False"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/display_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/choice_one_button"
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:background="@drawable/round_button_cool"
            android:fontFamily="@font/work_sans_bold"
            android:onClick="btnClick"
            android:text="@string/choice"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/choice_two_button"
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:background="@drawable/round_button_cool"
            android:fontFamily="@font/work_sans_bold"
            android:onClick="btnClick"
            android:text="@string/choice"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>