<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResultFragment"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="390dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/library_round_button"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/view_text_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="A"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/grade_compliment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_bold"
            android:text="Well Done Sir!!!"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/total_correct_answers"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/total_wrong_answers"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_wrong_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/show_details"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/nofill_button"
        android:fontFamily="@font/work_sans_medium"
        android:padding="10dp"
        android:text="Show Details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.62">

        <Button
            android:id="@+id/main_menu_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_cool"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/again_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_cool"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/again"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>